--- a/src/MEO.Frontend/src/app/escolas/criar-escola/criar-escola.component.html
+++ b/src/MEO.Frontend/src/app/escolas/criar-escola/criar-escola.component.html
@@ -1,63 +1,101 @@
 <h3>Nova escola</h3>
 <ngb-alert type="warning" class="my-3" *ngIf="possuiNotificacoes" (close)="fecharAlerta()">
-  Ocorreu um erro inesperado no sistema. Tente novamente mais tarde
+  {{ notificacao ? notificacao : 'Ocorreu um erro inesperado no sistema. Tente novamente mais tarde'  }}
 </ngb-alert>
-<form #form="ngForm" (ngSubmit)="submit(form)">
+
+<form [formGroup]="formEscola" (ngSubmit)="submit(formEscola)">
   <div class="form-row">
     <div class="form-group col-12 col-md-8">
       <label for="nome">Nome</label>
-      <input type="text" class="form-control" id="nome" name="nome" ngModel required #nome="ngModel" />
+      <input type="text" class="form-control" 
+      [class.is-invalid]="campoPossuiErro('nome')" id="nome" name="nome" formControlName="nome" required/>
+      <div class="invalid-feedback">
+        Campo obrigatório
+      </div>
     </div>
     <div class="form-group col-12 col-md-4">
       <label for="codigo">Codigo</label>
-      <input type="text" class="form-control" id="codigo" name="codigo" ngModel required #codigo="ngModel" />
+      <input type="text" 
+      [class.is-invalid]="campoPossuiErro('codigo')"
+      class="form-control" id="codigo" name="codigo" formControlName="codigo" required />
+      <div class="invalid-feedback">
+        Campo obrigatório
+      </div>
     </div>
     <div class="form-group col-12 col-md-5">
       <label for="logradouro">Logradouro</label>
-      <input type="text" class="form-control" id="logradouro" name="logradouro" ngModel required
-        #logradouro="ngModel" />
+      <input type="text" class="form-control" id="logradouro" name="logradouro" 
+      [class.is-invalid]="campoPossuiErro('logradouro')" formControlName="logradouro" required />
+      <div class="invalid-feedback">
+        Campo obrigatório
+      </div>
     </div>
     <div class="form-group col-12 col-md-3">
       <label for="numero">Número</label>
-      <input type="text" class="form-control" id="numero" name="numero" ngModel required #numero="ngModel" />
+      <input type="text" class="form-control" id="numero" name="numero"
+      [class.is-invalid]="campoPossuiErro('numero')" formControlName="numero" required />
+      <div class="invalid-feedback">
+        Campo obrigatório
+      </div>
     </div>
 
     <div class="form-group col-12 col-md-4">
       <label for="complemento">Complemento</label>
-      <input type="text" class="form-control" id="complemento" name="complemento" ngModel #complemento="ngModel" />
+      <input type="text" class="form-control" id="complemento" name="complemento" 
+      formControlName="complemento" />
     </div>
     <div class="form-group col-12 col-md-5">
       <label for="bairro">Bairro</label>
-      <input type="text" class="form-control" id="bairro" name="bairro" ngModel #bairro="ngModel" />
+      <input type="text" class="form-control" id="bairro" name="bairro" 
+      [class.is-invalid]="campoPossuiErro('bairro')" formControlName="bairro" required />
+      <div class="invalid-feedback">
+        Campo obrigatório
+      </div>
     </div>
     <div class="form-group col-12 col-md-3">
       <label for="cep">CEP</label>
-      <input type="text" class="form-control" id="cep" name="cep" ngModel required #cep="ngModel" />
+      <input type="text" class="form-control" id="cep" name="cep"
+      [class.is-invalid]="campoPossuiErro('cep')" formControlName="cep" required />
+      <div class="invalid-feedback">
+        Campo obrigatório
+      </div>
     </div>
     <div class="form-group col-12 col-md-4">
       <label for="tipoLocalizacaoId">Tipo Localização</label>
-        <select class="form-control" id="tipoLocalizacaoId" name="tipoLocalizacaoId" ngModel required
-        #tipoLocalizacaoId="ngModel">
+        <select class="form-control" id="tipoLocalizacaoId" name="tipoLocalizacaoId" 
+        [class.is-invalid]="campoPossuiErro('tipoLocalizacaoId')"
+        formControlName="tipoLocalizacaoId" required>
           <option *ngFor="let tipoLocalizacao of tiposLocalizacao" [ngValue]="tipoLocalizacao.id">
             {{tipoLocalizacao.descricao}}
           </option>
         </select>
-   
+        <div class="invalid-feedback">
+          Campo obrigatório
+        </div>
       </div>
     <div class="form-group col-12 col-md-5">
       <label for="telefone">Telefone</label>
-      <input type="text" class="form-control" id="telefone" name="telefone" ngModel required #telefone="ngModel" />
+      <input type="text" class="form-control" id="telefone" name="telefone"
+      [class.is-invalid]="campoPossuiErro('telefone')"formControlName="telefone" required />
+      <div class="invalid-feedback">
+        Campo obrigatório
+      </div>
     </div>
     <div class="form-group col-12 col-md-3">
       <label for="email">Email</label>
-      <input type="email" class="form-control" id="email" name="email" ngModel required #email="ngModel" />
+      <input type="email" class="form-control" id="email" name="email" 
+      [class.is-invalid]="campoPossuiErro('email')" formControlName="email" required  />
+      <div class="invalid-feedback">
+        Campo obrigatório
+      </div>
     </div>
     <div class="form-group col-12 col-md-4">
       <label for="site">Site</label>
-      <input type="text" class="form-control" id="site" name="site" ngModel #site="ngModel" />
+      <input type="text" class="form-control" id="site" name="site"
+      formControlName="site" />
     </div>
     <div class="form-group col-12 col-md-3 offset-md-9">
-      <button type="submit" class="btn btn-primary w-100" [disabled]="form.invalid">
+      <button type="submit" class="btn btn-primary w-100" >
           Salvar
         </button>
     </div>
