--- a/src/MEO.Frontend/src/app/core/topbar/topbar.component.html
+++ b/src/MEO.Frontend/src/app/core/topbar/topbar.component.html
@@ -15,7 +15,7 @@
         <a class="nav-link" [routerLink]="'/escolas'" (click)="isMenuCollapsed = true">Escolas</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="'/escolas/criar-escola'" (click)="isMenuCollapsed = true">Criar Escolas</a>
+        <a class="nav-link" [routerLink]="'/escolas/criar-escola'" (click)="isMenuCollapsed = true">Nova Escola</a>
       </li>
 
     </ul>
