--- a/src/MEO.Frontend/src/app/escolas/detalhes/detalhes.component.html
+++ b/src/MEO.Frontend/src/app/escolas/detalhes/detalhes.component.html
@@ -41,7 +41,7 @@
           Adicionar
         </button>
     </div>
-    <div class="row d-none d-md-flex my-2">
+    <div class="row d-none d-md-flex py-2 border-bottom my-2">
       <div class="col-3 h6">
         Código
       </div>
