--- a/src/MEO.Frontend/src/app/escolas/criar-escola/criar-escola.component.html
+++ b/src/MEO.Frontend/src/app/escolas/criar-escola/criar-escola.component.html
@@ -7,33 +7,32 @@
   <div class="form-row">
     <div class="form-group col-12 col-md-8">
       <label for="nome">Nome</label>
-      <input type="text" class="form-control" 
-      [class.is-invalid]="campoPossuiErro('nome')" id="nome" name="nome" formControlName="nome" required/>
+      <input type="text" class="form-control" [class.is-invalid]="campoPossuiErro('nome')" id="nome" name="nome"
+        formControlName="nome" required />
       <div class="invalid-feedback">
         Campo obrigatório
       </div>
     </div>
     <div class="form-group col-12 col-md-4">
       <label for="codigo">Codigo</label>
-      <input type="text" 
-      [class.is-invalid]="campoPossuiErro('codigo')"
-      class="form-control" id="codigo" name="codigo" formControlName="codigo" required />
+      <input type="text" [class.is-invalid]="campoPossuiErro('codigo')" class="form-control" id="codigo" name="codigo"
+        formControlName="codigo" required />
       <div class="invalid-feedback">
         Campo obrigatório
       </div>
     </div>
     <div class="form-group col-12 col-md-5">
       <label for="logradouro">Logradouro</label>
-      <input type="text" class="form-control" id="logradouro" name="logradouro" 
-      [class.is-invalid]="campoPossuiErro('logradouro')" formControlName="logradouro" required />
+      <input type="text" class="form-control" id="logradouro" name="logradouro"
+        [class.is-invalid]="campoPossuiErro('logradouro')" formControlName="logradouro" required />
       <div class="invalid-feedback">
         Campo obrigatório
       </div>
     </div>
     <div class="form-group col-12 col-md-3">
       <label for="numero">Número</label>
-      <input type="text" class="form-control" id="numero" name="numero"
-      [class.is-invalid]="campoPossuiErro('numero')" formControlName="numero" required />
+      <input type="text" class="form-control" id="numero" name="numero" [class.is-invalid]="campoPossuiErro('numero')"
+        formControlName="numero" required />
       <div class="invalid-feedback">
         Campo obrigatório
       </div>
@@ -41,63 +40,60 @@
 
     <div class="form-group col-12 col-md-4">
       <label for="complemento">Complemento</label>
-      <input type="text" class="form-control" id="complemento" name="complemento" 
-      formControlName="complemento" />
+      <input type="text" class="form-control" id="complemento" name="complemento" formControlName="complemento" />
     </div>
     <div class="form-group col-12 col-md-5">
       <label for="bairro">Bairro</label>
-      <input type="text" class="form-control" id="bairro" name="bairro" 
-      [class.is-invalid]="campoPossuiErro('bairro')" formControlName="bairro" required />
+      <input type="text" class="form-control" id="bairro" name="bairro" [class.is-invalid]="campoPossuiErro('bairro')"
+        formControlName="bairro" required />
       <div class="invalid-feedback">
         Campo obrigatório
       </div>
     </div>
     <div class="form-group col-12 col-md-3">
       <label for="cep">CEP</label>
-      <input type="text" class="form-control" id="cep" name="cep"
-      [class.is-invalid]="campoPossuiErro('cep')" formControlName="cep" required />
+      <input type="text" class="form-control" id="cep" name="cep" [class.is-invalid]="campoPossuiErro('cep')"
+        formControlName="cep" required />
       <div class="invalid-feedback">
         Campo obrigatório
       </div>
     </div>
     <div class="form-group col-12 col-md-4">
       <label for="tipoLocalizacaoId">Tipo Localização</label>
-        <select class="form-control" id="tipoLocalizacaoId" name="tipoLocalizacaoId" 
-        [class.is-invalid]="campoPossuiErro('tipoLocalizacaoId')"
-        formControlName="tipoLocalizacaoId" required>
-          <option *ngFor="let tipoLocalizacao of tiposLocalizacao" [ngValue]="tipoLocalizacao.id">
-            {{tipoLocalizacao.descricao}}
-          </option>
-        </select>
-        <div class="invalid-feedback">
-          Campo obrigatório
-        </div>
+      <select class="form-control" id="tipoLocalizacaoId" name="tipoLocalizacaoId"
+        [class.is-invalid]="campoPossuiErro('tipoLocalizacaoId')" formControlName="tipoLocalizacaoId" required>
+        <option *ngFor="let tipoLocalizacao of tiposLocalizacao" [ngValue]="tipoLocalizacao.id">
+          {{tipoLocalizacao.descricao}}
+        </option>
+      </select>
+      <div class="invalid-feedback">
+        Campo obrigatório
       </div>
+    </div>
     <div class="form-group col-12 col-md-5">
       <label for="telefone">Telefone</label>
       <input type="text" class="form-control" id="telefone" name="telefone"
-      [class.is-invalid]="campoPossuiErro('telefone')"formControlName="telefone" required />
+        [class.is-invalid]="campoPossuiErro('telefone')" formControlName="telefone" required />
       <div class="invalid-feedback">
         Campo obrigatório
       </div>
     </div>
     <div class="form-group col-12 col-md-3">
       <label for="email">Email</label>
-      <input type="email" class="form-control" id="email" name="email" 
-      [class.is-invalid]="campoPossuiErro('email')" formControlName="email" required  />
+      <input type="email" class="form-control" id="email" name="email" [class.is-invalid]="campoPossuiErro('email')"
+        formControlName="email" required />
       <div class="invalid-feedback">
         Campo obrigatório
       </div>
     </div>
     <div class="form-group col-12 col-md-4">
       <label for="site">Site</label>
-      <input type="text" class="form-control" id="site" name="site"
-      formControlName="site" />
+      <input type="text" class="form-control" id="site" name="site" formControlName="site" />
     </div>
     <div class="form-group col-12 col-md-3 offset-md-9">
-      <button type="submit" class="btn btn-primary w-100" >
-          Salvar
-        </button>
+      <button type="submit" class="btn btn-primary w-100">
+        Salvar
+      </button>
     </div>
   </div>
 
